# bolig

./: LICENSE  conf.py  pyproject.toml
pipeline/: download_articles.py  fetch_query_results.py  parse_articles.py  types.py
